feat: add assignment schedule